fix overflow issue

--- a/layout/js/src/page/Page.scss
+++ b/layout/js/src/page/Page.scss
@@ -21,6 +21,8 @@
   left: 0;
   right: 0;
   bottom: 0;
+
+  overflow-y: auto;
 }
 
 .suluvir-drawer-list {
